upate suit to 617

--- a/Assets/Yodo1/Suit/changelog.txt
+++ b/Assets/Yodo1/Suit/changelog.txt
@@ -165,3 +165,19 @@ unity iOS配置读写，iOS依赖优化
 17，xiaomiAd: 1.7.0 => 1.8.0
 18，更新AppsFlyer SKAN
 2022年09月22日20:54:48	张建秋
+
+6.1.7
+1,Google: games lib, auth lib升级
+2,4399：3.7.0 => 3.7.1
+3,233小游戏：3.0.0 => 3.0.1
+4,摸摸鱼：1450 => 1451
+5,超神抖音：2130 => 2143
+6,摸摸鱼广告：1450 => 1451
+7,今日游戏广告：2130 => 2143
+8,优量汇广告：4.482 => 4.491
+9,今日头条广告：4712 => 4808
+10,4399广告：147 => 148
+11,vivo广告：5633 => 5720
+12,sdk日志开关合规.
+13,sdk bridge.aar API修改.广告初始化优化。
+2022年10月20日11:03:37	张建秋
